trunk/Archive2/41/9d766c1a2f97ab/output
main.cpp:5:46: error: non-class, non-variable partial specialization 'func<int, S>' is not allowed
 template<typename S> void func<int, S>(int, S) {}
                                              ^
